# password-engine

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
docs/: architecture.md  architecture.puml  flow.md  flow.puml
src/password_engine/: __main__.py  app.py  entrypoints.py  identity.py
src/password_engine/api/: api.py
src/password_engine/auth/: auth.py
src/password_engine/cli/: cli.py  clieventhandler.py  cliparser.py
src/password_engine/commands/: buildcommands.py  commands.py
src/password_engine/config/: config.py
src/password_engine/db/: connect.py  queries.py  repo.py  schema.py
src/password_engine/encryption/: crypto.py
src/password_engine/events/: events.py
src/password_engine/generator/: passwordgenerator.py
src/password_engine/handlers/: createuserhandler.py  displayversionhandler.py  generatepasswordhandler.py  listpasswordshandler.py  storepasswordhandler.py
src/password_engine/runtime/: buildruntime.py  logruntime.py  readmetadata.py  runtimesettings.py
src/password_engine/utils/: utils.py
src/password_engine/utils/logging/: setuplogging.py
src/password_engine/utils/paths/: paths.py
tests/: test_api.py  test_app.py  test_buildcommands.py  test_buildruntime.py  test_cli.py  test_clieventhandler.py  test_cliparser.py  test_config.py  test_displayversionhandler.py  test_entrypoints.py  test_logruntime.py  test_main.py  test_paths.py  test_readmetadata.py  test_runtimesettings.py  test_setuplogging.py  test_utils.py
